# myRelay

./: README.md  pyproject.toml
src/: main.py
src/CompInterface/: CompInterface.py
src/Controller/: Controller.py
src/MQTTClient/: MQTTClient.py
